; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/pci/ttpci/extr_av7110_v4l.c_vidioc_enumaudio.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/pci/ttpci/extr_av7110_v4l.c_vidioc_enumaudio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.v4l2_audio = type { i64 }
%struct.file = type { i32 }

@.str = private unnamed_addr constant [20 x i8] c"VIDIOC_G_AUDIO: %d\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@msp3400_v4l2_audio = common dso_local global %struct.v4l2_audio zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_audio*)* @vidioc_enumaudio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vidioc_enumaudio(%struct.file* %0, i8* %1, %struct.v4l2_audio* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.file*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.v4l2_audio*, align 8
  store %struct.file* %0, %struct.file** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.v4l2_audio* %2, %struct.v4l2_audio** %7, align 8
  %8 = load %struct.v4l2_audio*, %struct.v4l2_audio** %7, align 8
  %9 = getelementptr inbounds %struct.v4l2_audio, %struct.v4l2_audio* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @dprintk(i32 2, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i64 %10)
  %12 = load %struct.v4l2_audio*, %struct.v4l2_audio** %7, align 8
  %13 = getelementptr inbounds %struct.v4l2_audio, %struct.v4l2_audio* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %3
  %17 = load i32, i32* @EINVAL, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %4, align 4
  br label %22

19:                                               ; preds = %3
  %20 = load %struct.v4l2_audio*, %struct.v4l2_audio** %7, align 8
  %21 = bitcast %struct.v4l2_audio* %20 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %21, i8* align 8 bitcast (%struct.v4l2_audio* @msp3400_v4l2_audio to i8*), i64 8, i1 false)
  store i32 0, i32* %4, align 4
  br label %22

22:                                               ; preds = %19, %16
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i32 @dprintk(i32, i8*, i64) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
